# AMSIO3

./: .gitattributes  README.md
PoissonOpenMP_CoarseGrain/: build.py  log_PoissonOpenMP_CoarseGrain.txt  util.py
PoissonOpenMP_CoarseGrain/install/: PoissonOpenMP_CoarseGrain
PoissonOpenMP_CoarseGrain/src/: main.cxx  parameters.cxx  parameters.hxx  scheme.cxx  scheme.hxx
PoissonOpenMP_CoarseGrain/src/common/: pause.hxx  timer.hxx  util.py
PoissonOpenMP_FineGrain/: log_PoissonOpenMP_FineGrain.txt  plot.py  run.py  submit.py
PoissonOpenMP_FineGrain/install/: PoissonOpenMP_FineGrain
PoissonOpenMP_FineGrain/src/: CMakeLists.txt  cond_ini.hxx  scheme.cxx  values.cxx
PoissonSeq/: log_PoissonSeq.txt  submit.py
PoissonSeq/install/: PoissonSeq
PoissonSeq/src/: CMakeLists.txt  values.cxx  values.hxx  version.hxx.in
PoissonSeq/src/common/: urand.hxx
TP1/: README.md
TP1/PoissonOpenMP_CoarseGrain/: log_PoissonOpenMP_CoarseGrain.txt  run.py
TP1/PoissonOpenMP_CoarseGrain/install/: PoissonSeq
TP1/PoissonOpenMP_CoarseGrain/src/: CMakeLists.txt  values.cxx
TP1/PoissonOpenMP_FineGrain/: log_PoissonOpenMP_FineGrain.txt
TP1/PoissonOpenMP_FineGrain/install/: PoissonOpenMP_FineGrain  PoissonSeq
TP1/PoissonOpenMP_FineGrain/src/: parameters.cxx  parameters.hxx
TP1/PoissonSeq/src/: CMakeLists.txt  force.hxx  main.cxx  parameters.cxx  scheme.cxx
TP1/PoissonSeq/src/common/: os.cxx
TP2/Enonce/: Enonce_TP2.tex
TP2/PoissonMPI/: log_PoissonMPI.txt  run.py  submit_build.py
TP2/PoissonMPI/install/: PoissonMPI
TP2/PoissonMPI/install/gnu/: PoissonMPI
TP2/PoissonMPI/src/: CMakeLists.txt  force.hxx  scheme.hxx  values.cxx  values.hxx
TP2/PoissonMPI/src/common/: arguments.cxx  pause.cxx
TP2/PoissonMPI_OpenMP/: build.py  log_PoissonMPI_OpenMP.txt  plot.py  submit_build.py  submit_plot.py  submit_run.py
TP2/PoissonMPI_OpenMP/install/: PoissonMPI_OpenMP
TP2/PoissonMPI_OpenMP/install/gnu/: PoissonMPI_OpenMP
TP2/PoissonMPI_OpenMP/src/: CMakeLists.txt  main.cxx  parameters.cxx  parameters.hxx  scheme.cxx  values.cxx
TP2/PoissonOpenMP/: log_PoissonOpenMP.txt  submit_build.py  submit_run.py  util.py
TP2/PoissonOpenMP/install/: PoissonSeq
TP2/PoissonOpenMP/install/gnu/: PoissonOpenMP
TP2/PoissonOpenMP/src/: CMakeLists.txt  main.cxx  parameters.cxx  parameters.hxx  scheme.cxx  values.cxx
TP2/PoissonOpenMP/src/common/: binary.hxx
TP3/PoissonCuda/: build.py  submit_run.py
TP3/PoissonCuda/src/: CMakeLists.txt  dim.hxx  iteration.hxx  main.cxx  memmove.hxx  parameters.cxx  parameters.hxx  scheme.cxx  scheme.hxx  values.cxx  values.hxx  variation.hxx  version.hxx.in
TP3/PoissonCuda/src/common/: arguments.cxx  timer.cxx
TP3/PoissonCuda/src/cuda/: cuda_check.cuh  dim.cu  dim.cuh  iteration.cu  memmove_cuda.cu  user.cu  user.cuh  values.cu  variation.cu
TP3/PoissonSeq/: build.py  submit_run.py
TP3/PoissonSeq/src/: CMakeLists.txt  parameters.hxx  scheme.cxx  user.cxx  user.hxx  values.cxx
TP3/PoissonSeq/src/common/: arguments.cxx  arguments.hxx  os.hxx
